# docker-cpp-project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-build.sh  docker-clean.sh  docker-run-app.sh  docker-run-app_test.sh
application/: CMakeLists.txt
application/src/: main.cc
module1/include/: fibonacci_generator.hpp
module1/src/: fibonacci_generator.cc
module2/include/: fibonacci.h
module2/src/: fibonacci.c
scripts/: build.sh
tests/: CMakeLists.txt  test_main.cc  test_module1.cc  test_module2.cc
